crates/spite-parser/tests/snapshots/parser_integration__arrays__malformed_elements_and_nested_strict_violations_are_syntax_errors.snap
---
source: crates/spite-parser/tests/arrays.rs
expression: "parse_script(\"[1 2]\").unwrap_err()"
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 3,
        end: 4,
    },
    message: "expected ]",
}
